# chaotic-mind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
android/app/: build.gradle
cmake/: FetchDependencies.cmake
src/: main.cpp
